src/objects/StakeHolder_Matrix_Supplier_contacts__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Role Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Role_Nokia__c</fullName>
        <label>Business Role Nokia</label>
        <picklist>
            <picklistValues>
                <fullName>Business owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Category Group Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Supplier Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Category Group Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Governance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Innovation Accont Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary Category Group Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary Category Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Contact</label>
        <referenceTo>StakeHolder_Matrix_Supplier_contacts__c</referenceTo>
        <relationshipLabel>StakeHolder Matrix - Supplier contacts (Delegated Contact)</relationshipLabel>
        <relationshipName>StakeHolder_Matrix_Supplier_contactsDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encrypted>true</encrypted>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName__c+&apos; &apos;+Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <formula>if(Last_Activity_Date_Year_Gap__c &gt;= 1,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_Year_Gap__c</fullName>
        <formula>IF( 
MONTH(TODAY())&gt;MONTH(LastActivityDate), 
YEAR(TODAY())-YEAR(LastActivityDate), 
IF(AND(MONTH(TODAY()) = MONTH(LastActivityDate), DAY(TODAY()) &gt;= DAY(LastActivityDate)), 
YEAR(TODAY())-YEAR(LastActivityDate), 
(YEAR(TODAY())-YEAR(LastActivityDate))-1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date Year Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeaveFrom__c</fullName>
        <label>Leave From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaveTo__c</fullName>
        <label>Leave To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <label>Mailing Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encrypted>true</encrypted>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ReportsTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>StakeHolder_Matrix_Supplier_contacts__c</referenceTo>
        <relationshipLabel>StakeHolder Matrix - Supplier contacts</relationshipLabel>
        <relationshipName>StakeHolder_Matrix_Supplier_contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>StakeHolder Matrix - Supplier contacts</relationshipLabel>
        <relationshipName>StakeHolder_Matrix_Supplier_contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Contact_Picklist__c</fullName>
        <label>Type Of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <formula>IF(SupplierName__c!= Null ,&apos;External&apos; , &apos;Internal&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Contact</label>
        <type>Text</type>
    </fields>
    <label>StakeHolder Matrix - Supplier contact</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StakeHolder Matrix - Supplier contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>